--- a/TasksProject/appsettings.json
+++ b/TasksProject/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MailSettings": {
+    "Email": "2slamgomaa2002@gmail.com",
+    "DisplayName": "corses",
+    "Password": "uhyb kvbu ikej qovb",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
